[package]
name = "ndc-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "ndc_sdk"
path = "src/lib.rs"

[[bin]]
name = "ndc_hub_example"
path = "bin/main.rs"

[features]
default = ["native-tls", "ndc-test"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

ndc-test = ["dep:ndc-test"]

[dependencies]
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", branch = "main" }
ndc-test = { git = "http://github.com/hasura/ndc-spec.git", branch = "main", optional = true }

async-trait = "0.1"
axum = { version = "0.7", features = ["http2"] }
axum-extra = "0.9"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
mime = "0.3"
opentelemetry = "0.24"
opentelemetry-http = "0.13"
opentelemetry-otlp = { version = "0.17", features = ["reqwest-client", "gzip-tonic", "tls", "tls-roots", "http-proto"] }
opentelemetry-semantic-conventions = "0.16"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-zipkin = "0.22"
prometheus = "0.13"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace", "validate-request"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
url = "2"

[dev-dependencies]
anyhow = "1"
